force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Minimum_Age_Limit_Requested_Months__c.field-meta.xml
<CustomField>
    <fullName>CC_Minimum_Age_Limit_Requested_Months__c</fullName>
    <label>Minimum Age Limit Requested - Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>