force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Multi_Age_Group_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CC_Multi_Age_Group_Capacity__c</fullName>
    <label>Multi-Age Group Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>