force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Name_of_FireMarshal__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_of_FireMarshal__c</fullName>
    <label>Name of FireMarshal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>