force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Name_of_FireMarshal_Health_Dept_Cert__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_of_FireMarshal_Health_Dept_Cert__c</fullName>
    <label>Name of Inspector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>