force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_No_Inspection_Justification__c.field-meta.xml
<CustomField>
    <fullName>CC_No_Inspection_Justification__c</fullName>
    <label>No Inspection Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>