force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_No_Inspection_Needed__c.field-meta.xml
<CustomField>
    <fullName>CC_No_Inspection_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Inspection Needed</label>
    <type>Checkbox</type>
</CustomField>