force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Number_of_Overlap_Children_Requested__c.field-meta.xml
<CustomField>
    <fullName>CC_Number_of_Overlap_Children_Requested__c</fullName>
    <label>CC Number of Overlap Children Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>