force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Number_of_Sinks__c.field-meta.xml
<CustomField>
    <fullName>CC_Number_of_Sinks__c</fullName>
    <label>Number of Sinks</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>