force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Number_of_your_own_children__c.field-meta.xml
<CustomField>
    <fullName>CC_Number_of_your_own_children__c</fullName>
    <label>Number of your own children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>