force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Old_Facility_Mailing_Apt_Suit__c.field-meta.xml
<CustomField>
    <fullName>CC_Old_Facility_Mailing_Apt_Suit__c</fullName>
    <description>To capture mailing apt. suit in application.</description>
    <label>Facility Mailing Apt. Suit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>