force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Old_Facility_Mailing_County__c.field-meta.xml
<CustomField>
    <fullName>CC_Old_Facility_Mailing_County__c</fullName>
    <description>To capture facility mailing county in application.</description>
    <label>Facility Mailing County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>