force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Old_Facility_Physical_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Old_Facility_Physical_Address__c</fullName>
    <label>Old Facility Physical Address</label>
    <type>Address</type>
</CustomField>