force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Outdoor_Sq_Footage_for_Operations__c.field-meta.xml
<CustomField>
    <fullName>CC_Outdoor_Sq_Footage_for_Operations__c</fullName>
    <label>Outdoor Sq. Footage used for Operations</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>