force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Owner_Co_Owner_Present_In_Facility__c.field-meta.xml
<CustomField>
    <fullName>CC_Owner_Co_Owner_Present_In_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Co Owner Present In Facility</label>
    <type>Checkbox</type>
</CustomField>