force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Owner_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Email</label>
    <type>Text</type>
</CustomField>