force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Past_Involvement_Due_Unlicensed_Care__c.field-meta.xml
<CustomField>
    <fullName>CC_Past_Involvement_Due_Unlicensed_Care__c</fullName>
    <label>Past Involvement Due To Unlicensed Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>