force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Person_of_Contact_For_Mailing_Add__c.field-meta.xml
<CustomField>
    <fullName>CC_Person_of_Contact_For_Mailing_Add__c</fullName>
    <description>It is used to store the change during amend process.</description>
    <label>Person of Contact For Mailing Add</label>
    <length>255</length>
    <type>Text</type>
</CustomField>