force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Pool_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Pool_Inspection_Date__c</fullName>
    <label>Pool Inspection Date</label>
    <type>Date</type>
</CustomField>