force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Portal_User_Account__c.field-meta.xml
<CustomField>
    <fullName>CC_Portal_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Portal User Account)</relationshipLabel>
    <relationshipName>Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>