force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Preschool_SA_Capacity__c.field-meta.xml
<CustomField>
    <fullName>CC_Preschool_SA_Capacity__c</fullName>
    <label>Preschool / SA Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>