force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Private_Water_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Private_Water_Test_Date__c</fullName>
    <label>Private Water Test Date</label>
    <type>Date</type>
</CustomField>