force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Professional_Qualification_ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CC_Professional_Qualification_ExpiryDate__c</fullName>
    <label>Professional Qualification Expiry Date</label>
    <type>Date</type>
</CustomField>