force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Program__c.field-meta.xml
<CustomField>
    <fullName>CC_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>