force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>CC_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Enrollment</label>
    <referenceTo>ProgramEnrollment</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>