force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Proper_car_seats_and_restraints_used__c.field-meta.xml
<CustomField>
    <fullName>CC_Proper_car_seats_and_restraints_used__c</fullName>
    <inlineHelpText>Are appropriate automobile restraints, such as car seats, used?</inlineHelpText>
    <label>Proper car seats and restraints used?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>