force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provide_Eve_Overnight_Weekend_Care__c.field-meta.xml
<CustomField>
    <fullName>CC_Provide_Eve_Overnight_Weekend_Care__c</fullName>
    <label>Provide Evening, Overnight, Weekend Care</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>