force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provide_Transportation__c.field-meta.xml
<CustomField>
    <fullName>CC_Provide_Transportation__c</fullName>
    <label>Provide Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>