force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provider_has_trained_in_health_safe__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_has_trained_in_health_safe__c</fullName>
    <inlineHelpText>Is the provider trained about basic health and safety issues?</inlineHelpText>
    <label>Provider has trained in health &amp; safe?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>