force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provider_offer_learning_opportunities__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_offer_learning_opportunities__c</fullName>
    <inlineHelpText>Does the provider offer learning opportunities to the children?</inlineHelpText>
    <label>Provider offer learning opportunities?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>