force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provider_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_Type_Value__c</fullName>
    <label>I am a</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Licensed Provider</fullName>
            </value>
            <value>
                <fullName>License Exempted Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>