force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provider_Understanding_Check__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_Understanding_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Understanding Check</label>
    <type>Checkbox</type>
</CustomField>