force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Provider_wash_hands_thoroughly__c.field-meta.xml
<CustomField>
    <fullName>CC_Provider_wash_hands_thoroughly__c</fullName>
    <inlineHelpText>Does the provider wash hands thoroughly, before and after 
diapering?</inlineHelpText>
    <label>Provider wash hands thoroughly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>