force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>CC_Reason_For_Rejection__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Over income limit</fullName>
            </value>
            <value>
                <fullName>Over resource limit</fullName>
            </value>
            <value>
                <fullName>No eligible child</fullName>
            </value>
            <value>
                <fullName>Child over age 13 with no special need</fullName>
            </value>
            <value>
                <fullName>Does not meet residency requirement</fullName>
            </value>
            <value>
                <fullName>Does not meet citizenship requirement</fullName>
            </value>
            <value>
                <fullName>Does not meet relationship requirement</fullName>
            </value>
            <value>
                <fullName>No valid need</fullName>
            </value>
            <value>
                <fullName>Sanction</fullName>
            </value>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Invalid protective service status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>