force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Reason_to_Withdraw__c.field-meta.xml
<CustomField>
    <fullName>CC_Reason_to_Withdraw__c</fullName>
    <label>Reason to Withdraw</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Application assistance needed</fullName>
            </value>
            <value>
                <fullName>Care is not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>