force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Receives_Federal_Funds__c.field-meta.xml
<CustomField>
    <fullName>CC_Receives_Federal_Funds__c</fullName>
    <label>Receives Federal Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>