force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Referral__c.field-meta.xml
<CustomField>
    <fullName>CC_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This indicates lookup to referral</description>
    <label>Referral</label>
    <referenceTo>Referral</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>