force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Regulatory_Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>CC_Regulatory_Authorization_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Authorization Type</label>
    <referenceTo>RegulatoryAuthorizationType</referenceTo>
    <relationshipLabel>Preliminary Application References</relationshipLabel>
    <relationshipName>Preliminary_Application_References</relationshipName>
    <type>Lookup</type>
</CustomField>