force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>CC_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>