force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Residence_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Residence_Description__c</fullName>
    <label>Residence Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>