force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Review_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Review_Start_Date__c</fullName>
    <label>Review Start Date</label>
    <type>Date</type>
</CustomField>