force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Revoked_Certi_License_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Revoked_Certi_License_Description__c</fullName>
    <label>Revoked Certificate/License Description</label>
    <type>TextArea</type>
</CustomField>