force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Saved_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_Saved_Session_Id__c</fullName>
    <label>Saved Session Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>