force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Sent_30_Days_Expiry_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Sent_30_Days_Expiry_Email__c</fullName>
    <label>CC Sent 30 Days Expiry Email</label>
    <type>Date</type>
</CustomField>