force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Smoke_detectors_installed_and_working__c.field-meta.xml
<CustomField>
    <fullName>CC_Smoke_detectors_installed_and_working__c</fullName>
    <inlineHelpText>Are smoke detectors in place and operational?</inlineHelpText>
    <label>Smoke detectors installed and working?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>