force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Special_Needs_Explaination__c.field-meta.xml
<CustomField>
    <fullName>CC_Special_Needs_Explaination__c</fullName>
    <label>Special Needs Explaination</label>
    <length>65534</length>
    <type>LongTextArea</type>
</CustomField>