force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Status_Change_To__c.field-meta.xml
<CustomField>
    <fullName>CC_Status_Change_To__c</fullName>
    <label>Status Change To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Home</fullName>
            </value>
            <value>
                <fullName>Group Home Child Care</fullName>
            </value>
            <value>
                <fullName>Child Care Center</fullName>
            </value>
            <value>
                <fullName>Friend, Family, Neighbor (FFN) Provider</fullName>
            </value>
            <value>
                <fullName>Relative Care Exempt (RCE) Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>