force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>CC_Submitted_By__c</fullName>
    <label>Submitted By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>