force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>CC_Submitted_On__c</fullName>
    <description>Date value of Submitted date field</description>
    <formula>DATEVALUE( CC_Submitted_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date value of Submitted date field</inlineHelpText>
    <label>Submitted On</label>
    <type>Date</type>
</CustomField>