force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Summer_Camp_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Summer_Camp_Service_Description__c</fullName>
    <label>Summer Camp Service Description</label>
    <type>TextArea</type>
</CustomField>