force-app/main/default/objects/PreliminaryApplicationRef/fields/CC_Tech_Assist_Required_Heating_Unit__c.field-meta.xml
<CustomField>
    <fullName>CC_Tech_Assist_Required_Heating_Unit__c</fullName>
    <label>Tech Assistance Required(Heating Unit)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>